--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Shardha</span>
+        <span id="name">Shradha</span>
       </h1>
       <p class="two" id="greetingText">Thanks For Clicking In Link</p>
     </div>
